# Agentic-Dev-Guardian

./: .gitignore  README.md
.agents/: rules.md
.agents/logs/: implementation_log.md  logic_correctness_audit_2026-03-22.md  reading_guide.md
.agents/memory/: architecture_blueprint.md  context.md  human_in_the_loop.md  package_capabilities.md
.agents/skills/agentic_problem_researcher/: SKILL.md
.agents/skills/devops_sre/: SKILL.md
.agents/workflows/: initialize-agentic-sandbox.md
backend/: astro_pr.diff  docker-compose.yml  guardian_audit.md  guardian_blueprint.md  guardian_hotfix.md  pyproject.toml  requirements.txt  research_pr.diff  sentry_error.txt  sktime_incident.txt  sktime_pr.diff  sktime_wiki.md  test_eval.patch  test_groq.py  test_mcp_client.py  test_pr.diff
backend/src/dev_guardian/: __init__.py  cli.py  mcp_server.py
backend/src/dev_guardian/agents/: __init__.py  blueprint_validator.py  gatekeeper.py  graph.py  hotfix_scribe.py  incident_triager.py  migration_scribe.py  pattern_translator.py  red_team.py  refactor_graph.py  refactor_patterns.py  refactor_planner.py  remediation.py  sandbox_reproducer.py  sre_graph.py  state.py
backend/src/dev_guardian/capability_clusters/: __init__.py  codebase_intelligence.py  core.py  incident_response.py  pr_governance.py  self_healing.py
backend/src/dev_guardian/core/: __init__.py  config.py  logging.py
backend/src/dev_guardian/docs/: __init__.py  adr_generator.py  structure_explainer.py  wiki_builder.py
backend/src/dev_guardian/graphrag/: __init__.py  hybrid_retriever.py  memgraph_client.py  qdrant_client.py  vector_manager.py
backend/src/dev_guardian/parsers/: __init__.py  ast_parser.py  models.py
(+6 files in other folders)
